# brainstormbuddy

./: .gitignore  .implementaiton_plan.md.kate-swp  .pre-commit-config.yaml  CLAUDE.md  Implementation_Plan_New_User_Flow.txt  Implementation_Plan_New_User_Flow_v2.txt  Implementation_Plan_New_User_Flow_v3.txt  README.md  RESOLVED_ISSUES.md  codecov.yml  implementaiton_plan.md  materialize_claude.py  project_overview.canvas  pyproject.toml  repomix-output.md  repomix-output.txt  repomix-output.xml  requirements-dev.txt  requirements.txt  test_fts_fix.py
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
app/: __init__.py  cli.py
app/core/: config.py  interfaces.py  state.py
app/export/: __init__.py  exporter.py
app/files/: atomic.py  batch.py  diff.py  lock.py  markdown.py  mdio.py  project_meta.py  scaffold.py  slug.py  validate_element.py  workstream.py
app/llm/: agents.py  claude_client.py  llm_service.py  real_claude_client.py  sessions.py
app/llm/agentspecs/: __init__.py  architect.md  critic.md  researcher.md
app/llm/prompts/: clarify.md  kernel.md  kernel_from_transcript.md  outline.md  refine_summary.md  research.md  summarize.md  synthesis.md
app/permissions/: settings_writer.py
app/permissions/hooks_lib/: __init__.py  format_md.py  gate.py  io.py
app/research/: __init__.py  db.py  ingest.py
app/synthesis/: __init__.py  controller.py  logger.py
app/tui/: __init__.py  app.py
app/tui/controllers/: __init__.py  exceptions.py  onboarding_controller.py  onboarding_logger.py  transcript.py
app/tui/styles/: __init__.py  common.py
app/tui/utils/: text.py
app/tui/views/: __init__.py  main_layout.py  main_screen.py  new_project_wizard.py  onboarding_chat_screen.py  research.py  session.py  welcome.py
app/tui/widgets/: __init__.py  agent_selector.py  command_palette.py  context_panel.py  domain_editor.py  file_tree.py  (+3 more)
brainstormbuddy/.obsidian/: workspace.json
docs/: onboarding_migration.md
logs/: run-20250820_121658.jsonl  run-20250820_121750.jsonl  run-20250820_123548.jsonl  run-20250820_123610.jsonl  run-20250820_124431.jsonl  run-20250820_124437.jsonl  run-20250820_125435.jsonl  run-20250820_125454.jsonl  run-20250820_125535.jsonl  run-20250820_125551.jsonl  run-20250820_125606.jsonl  run-20250820_125615.jsonl
tests/: test_agents_loader.py  test_batch.py  test_cli.py  test_command_palette_research.py  test_command_palette_synthesis_simple.py  test_config.py  test_diff.py  test_diff_atomic.py  test_domain_editor.py  test_exporter.py  test_file_lock.py  test_filters.py  test_format_md_hook.py  test_gate_hook.py  test_hooks_format_md.py  test_ingest.py  test_interfaces.py  test_kernel_stage.py  test_llm_fake.py  test_llm_service.py  test_markdown_extract.py  test_mdio.py  test_new_project_wizard.py  test_onboarding_chat_screen_comprehensive.py  test_onboarding_chat_screen_simple.py  test_onboarding_controller.py  test_onboarding_controller_improved.py  test_onboarding_logger.py  test_panel_updates.py  test_policies.py  test_policy_merge.py  test_project_meta.py  test_research_db.py  test_research_import_integration.py  test_research_import_view.py  test_scaffold.py  test_settings_writer.py  test_slug.py  test_smoke.py  test_state.py  (+10 more)
